# sqlsentinel

./: .cursorrules  .dockerignore  .env.bigquery.example  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_SPECIFICATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  SECURITY.md  SECURITY_PERFORMANCE_VALIDATION.md  SPRINT-2.1-SUMMARY.md  SPRINT.md  TECHNICAL_SPEC.md  coverage.json  diagnose_bigquery.py  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  test_bigquery.sh  test_bq_connection.py
.devcontainer/: Dockerfile  FIREWALL_CHANGES.md  devcontainer.json  init-firewall-bigquery.patch  init-firewall.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
docs/: CREDENTIAL_IMPLEMENTATION_GUIDE.md  FAQ.md  PUBLIC_ALPHA_PLAN.md  ai-workflows.md
docs/ai-setup/: .cursorrules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  copilot-instructions.md
docs/api/: health-checks.md  metrics.md
docs/architecture/: scheduler.md
docs/archive/deprecated-plans/: AI_FIRST_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  README.md
docs/archive/early-docs/: BIGQUERY_SETUP.md
docs/archive/specs/: API_SPECIFICATION.md
docs/deployment/: docker-guide.md  production-checklist.md
docs/guides/: bigquery-authentication.md  bigquery-cost-management.md  bigquery-setup.md  daemon-usage.md  troubleshooting-scheduler.md
docs/notifications/: multi-channel.md  slack.md  webhook.md
docs/operations/: logging-schema.md  security-validation.md
docs/project/: SPRINT.md
docs/sprints/: PHASE-1-STATUS.md  README.md  sprint-1.1-plan.md  sprint-1.2-completion.md  sprint-1.2-plan.md  sprint-2.1-completion.md  sprint-2.1-progress.md  sprint-2.2-plan.md
docs/sprints/phase-1/week-1/: sprint-1.1-completion.md  sprint-1.2-plan.md
docs/sprints/phase-1/week-2/: sprint-2.1-plan.md  sprint-2.2-completion.md  sprint-2.2-kickoff.md  sprint-2.2-plan.md
docs/sprints/phase-1/week-3/: sprint-3.1-completion.md  sprint-3.1-plan.md  sprint-3.2-completion.md  sprint-3.2-plan.md
docs/sprints/phase-1/week-4/: SPRINT-4.1-SUMMARY.md  sprint-4.1-completion.md  sprint-4.1-plan.md  sprint-4.1-progress.md  sprint-4.2-completion.md  sprint-4.2-plan.md
examples/: README.md  alerts-multi-channel.yaml  alerts.yaml  bigquery-alerts.yaml  sample_data.db  sample_data.sql  sqlsentinel.db
scripts/: docker-build.sh  docker-test.sh  validate-health.sh
security-reports/: bandit-report.json  pip-audit-report.json  safety-report.json
src/sqlsentinel/: __init__.py  cli.py  server.py
src/sqlsentinel/config/: __init__.py  loader.py  validator.py
src/sqlsentinel/database/: __init__.py  adapter.py  bigquery_adapter.py  factory.py  schema.py
src/sqlsentinel/executor/: __init__.py  alert_executor.py  history.py  query.py  state.py
src/sqlsentinel/health/: __init__.py  checks.py
src/sqlsentinel/logging/: __init__.py  config.py
src/sqlsentinel/metrics/: __init__.py  collector.py
src/sqlsentinel/models/: __init__.py  alert.py  errors.py  notification.py
src/sqlsentinel/notifications/: __init__.py  base.py  email.py  factory.py  slack.py  webhook.py
src/sqlsentinel/scheduler/: __init__.py  config_watcher.py  scheduler.py
src/sqlsentinel/services/: __init__.py
src/sqlsentinel/utils/: __init__.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_loader.py  test_config_validator.py  test_database_adapter.py  test_query_executor.py  test_server.py
tests/database/: test_bigquery_adapter.py  test_factory.py  test_schema.py
tests/executor/: test_alert_executor.py  test_history.py  test_state.py
tests/fixtures/: integration_config.yaml  invalid_config.yaml  multi_alert_config.yaml  valid_config.yaml
tests/health/: test_checks.py
tests/integration/: __init__.py  test_bigquery_integration.py  test_real_email.py
tests/logging/: test_config.py
tests/metrics/: test_collector.py
tests/models/: __init__.py  test_alert.py  test_errors.py  test_notification.py
tests/notifications/: __init__.py  test_email.py  test_factory.py  test_slack.py  test_webhook.py
tests/scheduler/: test_config_watcher.py  test_scheduler.py
tests/services/: __init__.py
tests/utils/: __init__.py
