[tool.poetry]
name = "sqlsentinel"
version = "0.1.0"
description = "SQL-first alerting system for data analysts"
authors = ["SQL Sentinel Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sqlsentinel/sqlsentinel"
repository = "https://github.com/sqlsentinel/sqlsentinel"
keywords = ["sql", "alerting", "monitoring", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "sqlsentinel", from = "src"}]

[tool.poetry.scripts]
sqlsentinel = "sqlsentinel.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
sqlalchemy = "^2.0"
pyyaml = "^6.0"
croniter = "^2.0"
apscheduler = "^3.10"
watchdog = "^5.0"
google-cloud-bigquery = "^3.14"
google-auth = "^2.36"
prometheus-client = "^0.19"
python-json-logger = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
black = "^23.12"
mypy = "^1.7"
ruff = "^0.1"
pre-commit = "^3.6"
types-pyyaml = "^6.0"
# Security scanning tools
safety = "^3.0"
pip-audit = "^2.6"
bandit = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "croniter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.bigquery"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.auth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pythonjsonlogger"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=sqlsentinel",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
